# command-service-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  compliance.yml  publish.yml
compliance/: README.md
compliance/invalid/: semantic.yaml  syntax.yaml
compliance/valid/: basic.yaml  ideas.yaml
csprotocol/: __init__.py  cli.py  generator.py  main.py  parser.py  updater.py
examples/: basic_usage.py  llm_integration.py
prompts/: system-prompt-mvp.md
standard/: CSS-1.0.md  RFC-CSP-1.0.md
tests/: test_compliance.py  test_generator.py  test_main.py  test_parser.py
