[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csprotocol"
version = "1.0.0a1"
description = "Command Service Protocol — deterministic command interface for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Petro Nazarenko", email = "petro@nazarenko.dev" }
]
keywords = [
    "csp",
    "command-service-protocol",
    "ai",
    "agents",
    "llm",
    "automation",
    "protocol",
    "deterministic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[project.scripts]
csp = "csprotocol.cli:main"

[project.urls]
Homepage = "https://github.com/petro-nazarenko/command-service-protocol"
Repository = "https://github.com/petro-nazarenko/command-service-protocol"
Issues = "https://github.com/petro-nazarenko/command-service-protocol/issues"
Changelog = "https://github.com/petro-nazarenko/command-service-protocol/blob/main/CHANGELOG.md"
Specification = "https://github.com/petro-nazarenko/command-service-protocol/blob/main/standard/CSS-1.0.md"

[tool.hatch.build.targets.wheel]
packages = ["csprotocol"]

[tool.pytest.ini_options]
testpaths = ["tests", "compliance"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.version]
path = "csprotocol/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
